smt40 prospectus work

--- a/smt40/currentProspectus/SMT-40Prospectus.Rmd
+++ b/smt40/currentProspectus/SMT-40Prospectus.Rmd
@@ -10,15 +10,16 @@ output:
 ## Motivation 
 
 Melodic dictation is the process in which an individual hears a melody, retains it in memory, and then uses their knowledge of Western musical notation to recreate the mental image of the melody on paper in a limited time frame.
-For many, becoming proficient at this task is at the core of developing one's aural skills which is evident from the fact that most aural skills texts with content devoted to honing one's listening skills have sections on melodic dictation [@karpinskiAuralSkillsAcquisition2000].
+For many, becoming proficient at this task is at the core of developing one's aural skills which is evident from the fact that most aural skills textbooks with content devoted to honing one's listening abilities have sections devoted to learning how to take melodic dictation [@karpinskiAuralSkillsAcquisition2000].
 Additionally, any school accredited by the National Association of Schools of Music in North America requires students to learn this skill  [@NationalAssociationSchools2018 §VIII.6.B.2.A].
+Yet despite this ubiquity in the pedagogy of melodic dictation, exactly _how_ this process works is not understood: Music theorists do not have an explanatory theory of how melodic dictation works. 
 
-The lack of knowledge regarding aural skills is alarming given the degree to which music theorists are engaged with the teaching and assesing of this ability.
-As a community, a more systematic understanding of _how_ people learn melodies is not only important from an pedagogical point of view, but understanding how people learn and percieve melodies is the locus of research tangential to music theory, music education, as well as music cognition. 
-While there have been repeated calls throughout the past few decades to sythesize these disprate literatures, the literature is sparse in relation to how frequent melodic dictation appears as part of our curricula^[Paney 2016 notes that since 2000 only four studies looking expicitly at melodic dictation have been published in music pedagogy journals].
-Reviewing the current state of reserach on melodic dictation higlights the need for the theory community to have a better understanding as to how this process works.
+The lack of knowledge regarding melodic dictation is alarming given the degree music theorists are engaged with the teaching and assessing of this ability.
+As a community, a more systematic understanding of _how_ people learn melodies is not only important from an pedagogical point of view, but understanding how people learn and perceive melodies is at the locus of research tangential to music theory, music education, as well as music cognition. 
+While there have been repeated calls throughout the past few decades to synthesize these disparate literatures, the literature is sparse in relation to how frequent melodic dictation appears as part of our curricula^[Paney 2016 notes that since 2000 only four studies looking explicitly at melodic dictation have been published in music pedagogy journals].
+Reviewing the current state of research on melodic dictation highlights the need for the music theory community to better understand melodic dictation and the literature that surrounds it.
 
-Much of the fundamental work on melodic dictation was sythensized via the work of Gary Karpinski.
+Much of the fundamental work on melodic dictation was synthesized via the work of Gary Karpinski.
 Originally appearing in an article from 1990, and then later the focus of of the third chapter of _Acquiring Aural Skills_, Karpinski proposes a four step model that describes an idealized process of melodic dictation.
 The four steps include 
 
@@ -27,90 +28,101 @@ The four steps include
 3. Musical Understanding 
 4. Notation
 
-and are conceptualized as a looping process that is done over each chunk of musical material that the listern focuses on via a process of extractive listening and appear as it was in his text in Figure 1.
-As a pedaogical tool, Karpinki's model distils a complicated and almost esoteric process into a managable system that benefits both students as well as aural skills pedagoges.
-Karpinski's model describes the processe of melodic dictation without asserting _how_ the process happens and lacks robustness in that it is agnostic to both differences at the individual level, as well as the for different melodic materials. 
+and are conceptualized as a looping process that is done over each chunk of musical material that the listener focuses on via a process of extractive listening.
+His flowchart of the process is reproduced below in Figure 1. 
 
-Sentence here using both of the musical examples of the same note length to make the point that there is more going on here that can be encapsulated by the Karpinski model.
-Figure 3 and 4.
+* FIGURE 1 -- Karpinski Flow Chart 
 
-In this dissertation, I use Gary Karpinski's four step model of melodic dictation as a stepping off point to highlight defecienies in the model (don't want to be too harsh here...).
+As a pedagogical tool, Karpinski's model distills a complicated and almost esoteric process into a manageable system that benefits both students as well as aural skills pedagogues.
+Karpinski's model describes the process of melodic dictation but his model makes no claims as to _how_ the process happens.
+Though not the original intention of the model, this four step model lacks robustness in that it is agnostic to both differences at the individual level, as well as the for differences in melodic material.
 
-Also in past 20 years we have had seen huge leaps in both ability to understand how individual differences play a role in music perception tasks as well as an ability to quantify and operationalize differences in melodies that reflect something like a theorists' intuitive understanding. 
-In order to organize and then reflect on the vast amount of factors that could contribute to how a person performs in melodic dictaiton I propose a taxonomy of parameters with both individual (e.g. cognitive and evironmental) and musical (e.g. structural and experimental) parameters that have evidence in last twenty years since Karpinski that should be further explored when looking at melodic dictaiton.
-List here that the taxonomy is Figure 4.
+For example, Karpinski suggests an example for discussion based on his idealized process and claims that listeners with "few to no chunking skills" should be able to dictate a melody of twelve to twenty notes long with two passes of his flowchart.
+While this provides an approximate rule of thumb as to what can be expected of students, these suggestions are generated from a fixed system and are not flexible to individuals with different experience levels^[Karpinski does in fact note that as listeners develop more varied skills they can "entertain some significant deviations from such a process," p.103 and gives relevant examples, but these deviations are not formalized which is most likely due to the multiplicity of permutations that may exist].
+To give an example, both melodies from Figure 1 and 2 are 20 notes in length, yet the strategies and thus perceived difficulty of dictating each melody would be presumably different for individuals with different musical training backgrounds.
+Not only will an individual's prior experience affect this process, but presumably the melodic material will as well.
 
-Using this taxonomy as a guide, I investigate thought to contribute to tasks of melodic dictation using diverse methodloogical toolbox which borrows techniques ranging from cognitive psychology, to computational musicology, interepreting all along the way with insights from music theory.
+* MELODIES
+
+In this dissertation, I continue the line of research began with Gary Karpinski's four step model of melodic dictation by stepping beyond this four step model.
+I do this by first exploring how both individual experiences and musical material can affect melodic dictation separately, examine how these factors interact, then finally posit an explanatory computational model of melodic dictation.
+The past 20 years of research since _Aural Skills Acquisition_ have highlighted the importance of taking into account both ability to understand how individual differences play a role in music perception tasks as well as an ability to quantify and operationalize differences in melodies that reflect a theorists' intuitive understanding of melodic material. 
+In order to organize and then reflect on the vast amount of factors that could contribute to how a person performs in melodic dictation I propose a taxonomy of parameters with both individual (e.g. cognitive and environmental) and musical (e.g. structural and experimental) parameters from the last twenty years that should be further explored when looking at melodic dictation in order to have a more complete understanding of how melodic dictation works.
+
+* List here that the taxonomy is Figure 4.
+
+Using this taxonomy as a guide, I investigate factors thought to contribute to tasks of melodic dictation using diverse methodological toolbox which borrows techniques ranging from cognitive psychology, to computational musicology, and music theory.
 
 ## Present Research Question 
 
 This dissertation takes an interdisciplinary approach to answer the question: **_how_ does melodic dictation work**?
-In order to answer this question comprehensively and following in the path of Karpinski I sythesize and utalize work from music theory, music education, and music cognition to answer questions related to this.
+In order to answer this question comprehensively I synthesize and utilize work from music theory, music education, and music cognition to answer questions related to this.
 Specifically, I set out to answer
 
 1. To what degree are individual differences in cognitive ability predictive of a person's ability to perform musical memory tasks?
-2. To what degree do abstracted melodic features from FANTASTIC help with determint diffculty of dictaiton melody and line with behavior and teacher intuition?
-4. How can patterns from a corpus of sight singing melodies serve as representations ofw hat people implicitly and explicitly know?
-5. If cast as an experiment, how can we predict how well someone does when you combine both individual and musical features? What problems arise for this kind of research to be pursed with these great new tools we have from computaitonal musicology and psychometrics? 
-5. Is it possible to posit a computational, explatory model of melodic dictation that explains _how_ the process works? THis will have to be intuitively understood by theorists and represent be phenomincallogically passable to the descion making process that people engage in with melodic dictation
+2. To what degree do abstracted melodic features help determine the difficulty of dictation melody in line with expert intuition?
+3. How can patterns from a corpus of sight singing melodies serve as representations of what people implicitly and explicitly know?
+4. If cast as an experiment, how can we predict how well someone does on a melodic dictation task when both individual and musical features are combined? What problems arise for this kind of research to be pursued? 
+5. Is it possible to posit a computational, explanatory model of melodic dictation that explains _how_ the process works that mirrors the phenomenological decision process that individuals engage with when performing melodic dictation?
 
-With each of these five questions serving as the basis for each of the five chapters of original content, I next detail what I will use for each of these methodlogies in detail. 
+With each of these five questions serving as the basis for each of the five chapters of original content, I next detail what I will use for each of these methodologies in detail. 
 
 ## Outline Research Methods
 
-In order to investigate my first research question, I analyze and intepret data from a large scale experiment conducted over the last year in collaboration with the Louisiana State University's cognitive psychology program.
-The experiment uses a large sample of (n = X) students who took part in a multi part experiemnt where we took measures of cognitive ability using multiple measures of for both general fluid intelligence and workign memory capacity, as well as musical background as subjective self report, and then also an object test of musical memory via a melodic memory test.
-Given the comlexity of variables at play, I analyze the data using structural equation modeling-- a statstical technique developed in order to parse out causal relationships within covariance structures-- and find evidence for what Berz 1995 said that things like working memory capacity are huge predictors of musical ability and need to be accounted for when looking at tasks of musical perception. 
+In order to investigate my first research question, I analyze and interpret data from a large scale experiment conducted over the last year in collaboration with the Louisiana State University's cognitive psychology program.
+The experiment uses a large sample of (N = 346) students who took part in a multi part experiment where we took measures of cognitive ability using multiple measures of for both general fluid intelligence and working memory capacity, measures of musical background via subjective self report, and then also an objective test of musical memory via a melodic memory test.
+Given the complexity of variables at play, I analyze the data using structural equation modeling-- a statistical technique developed in order to parse out causal relationships within covariance structures-- and find evidence for that working memory plays a large role in tasks of musical perception. 
+These results corroborate earlier theoretical claims regarding the need to investigate musical working memory (Berz, 1995).
 
-For my third chapter (examining question 2) survey history of computational musicology and offer a speculative discussion about how work from computational musicology can be used in order to serve as a proxy for the intuitive degrees of difficulty that instructors do when doing melodies.
+I then introduce a novel corpus in the third chapter that will consist of over 600 sight singing melodies.
+Using recent advancements in computational musicology, I show how there are statistical norms present in this corpus and and suggest that there is a link between using these melodies as an individual's implicit knowledge of a musical structure.
+In the fourth chapter I demonstrate how computationally extracted features can serve as a quantifiable proxy for a pedagogues' intuition and propose application for future research. 
+Following earlier claims by Meyer (1956) and later computationally driven research by Pearce (2018) I note how information derived from these corpus studies can be incorporated in experiments investigating melodic dictation. 
+The corpus here also can be then utilized by other researchers who wish to investigate corpus level claims. 
 
-Following the third chapter's logic, I then introduce a novel corpus in kern format in the fourth chapter of sight singing melodies.
-Using recent advancements in computational musicology, I show how there are statistical norms present in this corpus and other ones and then suggest that there is a link between using these melodies as an individual's implict knowledge of a musical strcutre MEYER and how that can be used behaviorally in melodic dictation.
-The corpus here also can be then utalized by other reseracher as a resource for research and shit. 
+Synthesizing the assumptions and findings from the previous three chapters, I combine the work on individual differences and melodic differences in order to operationalize all aspects here and put them together in an experiment.
+Here I reflect on the many choices that can be made in at this process and talk about implications and limitations of measuring melodic dictation in an experimental setting. 
+Using these experimental methods allows the researcher to determine what happens when the aforementioned musical materials are manipulated in an ecologically valid setting.
+Findings from this chapter corroborate earlier findings that musical features do in fact play a large role in an individual's ability to perform melodic dictation.
+In detailing the methodologies used in this chapter, I also put forward a complete and free set of software and analysis method so future researchers looking to explore this question on their own are not limited in terms of technical accessibility.
 
-Sythesizing the asssumptions and findings from the previosu three chapters, I combine the fact that individual difference seem to matter and can be measured and what I said about how you can also measure differences in melodies in order to operationalize all aspects here and put them together in an experiment.
-Here I reflect on the many choices that can be made in at this process and talk about implications and limitations of measuring it like this 
-Using these experimental methods allows me to determine what happens when you actually do this in an ecological setting. 
-
-Finally, in summerizing everything, in the last chapter I put forward a computational model of melodic dictation that explicitly detials each step in the decision making proces.
-This Baysian inspired model takes account of a listers prior knowledge, explict understanding of musical material, and then allows a test melody to be computationally dictated in order to result in an difficulty core based on previous knowledge, as well as measures thought to be influential like working memory capacity from above. 
-Putting this down on paper, or more like in code puts it all on the tablble and allows for more detailed discussion of the process.
+Finally, in the last chapter I put forward a computational model of melodic dictation that explicitly details each step the melodic dictation process.
+This Bayesian inspired model takes account of a listener's prior knowledge, explicit understanding of musical material, and then allows a target melody to be computationally dictated in order to result in an difficulty score based on previous knowledge, as well as measures thought to be influential like working memory capacity from above. 
+In formalizing this as a computational model, I account for all the aspects previously deemed relevant to the melodic dictation process, thus providing a new pedagogical and research framework to situate work on melodic dictation.
 
 ## Significance of Project to Music Theory
 
-Exploring melodic dictation using interdisciplinary approaches allows the music research community to have more comprehesive understanding of melodic dictation.
-Firstly, and most importantly and as stated above, there is not an explantory model of how melodic dication, something we all do, actually works.
-We should have a theory of melodic dictation.
-By putting forward an explanatory theory in the form of a computational model that is informed by experimental evidence, we are able to dig deeper into each nook and cranny of how it works.
+Exploring melodic dictation using interdisciplinary approaches allows the music research community to have more comprehensive understanding of melodic dictation.
+Firstly, and most importantly and as stated above, there is not an explanatory model of how melodic dictation works. 
+Given its importance to the responsibilities of most music theorists, a working theory of how melodic dictation works would only further our pedagogical understandings. 
+Additionally by putting forward an explanatory theory in the form of a computational model that is informed by experimental evidence, theorists are able to discuss the melodic dictation process with more exact language.
 
-As currently stands, can suggeset that working memory capacity does play a role.
-We have a nwe corpus of melodies that can be used.
-Have written software that anyone can now use and do this exactly to look at other features with no coding experience. 
-And this model gives us langauge.
-Given fact that there are moveable parameters, can also use it to help inform questions about representation of melodies, how important it is of the size of wmc, and establish a clear link between why it is important for students to sight sing in that explict understanding of musical material will for the prior basis of ability to take melodic dictation.
+In terms of novel research findings, this dissertation provides new evidence for some earlier theoretical claims.
+As mentioned above, work from this dissertation suggests that working memory does in fact play a large role in question of melodic perception, thus corroborating earlier claims by Berz (1995).
+This also dissertation puts forward a new corpus of melodies that can be used by the computational musicology community.
+Additionally, have written software using open source libraries, new avenues of research can be now open to other researchers interested in setting up experiments investigating melodic dictation with little to no programming experience. 
+Finally, this dissertation posits a new, and explanatory model of melodic dictation based on work from cognitive psychology and computational musicology.
+By putting forward computational, statistically driven model, the music theory pedagogy community can have a new tool to discuss the finer points as to how melodic dictation might work as a complete process.
+Given the model's malleable parameters, discussion around the model can also inform questions about the efficacy of representation of melodies, the importance of an individual's working memory capacity, and establish a clear link between the importance for students to become proficient at sight sing.
 
-As stated above, given the ubiquity of melodic dictation in schools of music and our responsiblity as music theory pedagoges to be able to explain what we do, it is important to have a theory of melodic dictation that is explanatory since we are grading people on it.
-Important to know the degree to which abilities can be learned, how much of it comes from pre-existing individual differences to cater to the diversity of students that we teach, and it is especially important now with what everyone else is saying about thinking about what should be put in our curicula for schools of music 
-Maybe seomthing about polymorphism here 
-
-Summary end paragraph about how research has a goal in that it both tells us more about melodic perception and help inform work on music and memory and also having a more comprehensive model to describe this 
-
-
-Doing this will also open up a much more specific volcabulary for talkign about things that people complain about like... mental represetnation, if logical to talk about SD qualia as thing or not, best link sight singing to things, how to be most effective teacher, also bring topics of cognition for ride since this is about learning 
-and more ways to look at it that are accessible to tons of people will help out our students in that we can be more effective teachers. 
+As stated above, given the ubiquity of melodic dictation in Schools of Music and our responsibility as music theory pedagogues to be able to explain what we do, it is important to have a theory of melodic dictation that is explanatory so students can be correctly assessed on this exercise.
+As a community it is important to know the degree to which abilities can be learned and how much ability derives from pre-existing individual differences so that we as pedagogues can cater to the diversity of students that we teach.
+This is is especially important given current conversations regarding the content what should be considered central to the curricula for an accredited School of Music education.
+Though not a central thesis of the dissertation, throughout the dissertation I argue for a more modular, polymorphic conception of musicianship based on work that has resulted from my research on melodic dictation.
+By conceptualizing musicianship as a set of related, though not unified abilities, we as pedagogues can reconceptualize how we teach and think about the processes that enable or musical choices and be more effective teachers.
 
 ## Current Progress
 
 As of OCTOBER 25th, three chapters of the dissertation have been completed as drafts.
 The completed chapters include the literature review, the fifth chapter on experimental method, as well as the attached chapter that describes the computational model.
-The second chapter currently exists as a conference proceedings paper from the International Conference on Music Perception and Cognition 15 and I am currently in the process of changing the langauge and expanding on all of the figures and analyses used in the shorter version of the paper.
-I am still in the process of encoding the melodies and have finished XXX out of the goal of 366.
-The chapters on usign computational tools as well as describing the corpus have been outlined, but have not been completed. 
+The second chapter currently exists as a conference proceedings paper from the International Conference on Music Perception and Cognition 15 and I am currently in the process of changing the language and expanding on all of the figures and analyses used in the shorter version of the paper.
+I am still in the process of encoding the melodies and have finished encoding one third of the melodies in the corpus.
+The chapters on using computational tools as well as describing the corpus have been outlined, but have not been completed. 
 
-Research that resulted from earlier work investigting problems with measuring and modeling musical ability has been _accepted for publication and is forthcoming in Musica Sciencae_ and work from the fifth chapter on using experimental methdods as a means to understand melodic dictation is set to be published in a chapter for an upcoming _Routledge_ book that has been tenatively titled _Understanding Melodic Dictation via Experimental Methods_.
-Once finished, the computational chapters are set to be submitted to the _International Society for Music Information Retrevial_ and results from the experiments in chapter 6 are set to be submitted for an article that includes both sets of experiments for a music perception journal.
-A review of melodic dictation literature as it relates to _Karpinksi_ as well as the computatonal model as it pertains to music theory pedagogy also should get published
-Current progress of the dissertation is avalible online where all the materials, software, text, and supplmental litertaure cited in the dissertation can also be accessed in able to facilitate more accsible reserach for anyone wanting to join this area of research.
+Research that resulted from earlier work investigating problems with measuring and modeling musical ability has been accepted for publication and is forthcoming in _Musica Sciencae_ and work from the fifth chapter on using experimental methods as a means to understand melodic dictation is set to be published in a chapter for an upcoming _Routledge_ book that has been tentatively titled _Understanding Melodic Dictation via Experimental Methods_.
+Once finished, the computational chapters are set to be submitted to the _International Society for Music Information Retrevial_ and results from the experiments are set to be submitted for an article that includes both sets of experiments for a music perception journal.
+A review of melodic dictation literature as it relates to _Karpinksi_ as well as the computational model as it pertains to music theory pedagogy will also be published in a journal where the readership overlaps between music theory, music cognition, and music education. 
+Current progress of the dissertation is available online where all the materials, software, text, and supplemental literature cited in the dissertation can also be accessed in able to facilitate more accessible research for anyone looking to become involved with this area of research.
 
-A completed draft of the dissertation will be sent to the committee in early 2019 with plenty of time left for revisions before the official submission date of March 18th.
-The dissertation will be defended in the weeks after at conenent time for everyone involved.
+A completed draft of the dissertation will be sent to the committee in early 2019, thus allotting two and a half months for  revisions before the official submission date of March 18th.
+The dissertation will be defended in the weeks after submission at a time where all members of the committee are able to attend.
