--- a/document/06-computational-model.Rmd
+++ b/document/06-computational-model.Rmd
@@ -2,37 +2,42 @@
 
 ## What Is A Model And Why do you need a model
 
-In his 2007 article _Models of music similarity_ [@wigginsModelsMusicalSimilarity2007] Geraint Wiggins makes a distinction between _descriptive_ and _explanatory_ models when describing models that describe human behavior. 
+In his 2007 article _Models of Music Similarity_ [@wigginsModelsMusicalSimilarity2007] Geraint Wiggins distinguishes between _descriptive_ and _explanatory_ models in describing the modeling of human behavior. 
 Descriptive models assert what will happen in response to an event.
-For example, as noted in ________________.
-While the _______ is assumed to drive the rise in _______, merely stating that there is an established relationship between one variable and the other says nothing about the inner workings of this process.
+For example, as noted in the previous chapter, as the note density of a melody increases and the tonalness of a melody decreses, a melody will become harder to dictate.
+While the increase in note density is assumed to drive the decrease in dictation scores, merely stating that there is an established relationship between one variable and the other says nothing about the inner workings of this process.
 An explanatory model on the other hand not only describes what will happen, but additionally notes why and how this process occurs.
 For example, much of the work musical expectation demontrates that as exposure to a musical style for an individual increases, so does that persons's ability to to predict specific events with a given musical texture.
 Not only does it predict more accurate responses, but many of these models like HURON, MARGULIS, PEARCE derrive their underlying theory about this behavior from the brain's ability to implicitly track statistical regularities in musical perception SAFFRAN.
-The _how_ derrives from the brain's ability to track statistical regularities musical information in the environment and the _why_ derrives from evolutionary demands in that organisms that are able to make more predictions about their environment are more likely to survive and pass on their genes HURON 2006. 
+The _how_ derrives from the brain's ability to track statistical regularities in musical information in the environment and the _why_ derrives from evolutionary demands in that organisms that are able to make more predictions about their environment are more likely to survive and pass on their genes HURON 2006. 
+
 Wiggins notes that although there can be both explanatory and descriptive theories, depending on the level of abstraction, a theory may be explanatory at one level, yet descriptive at another.
-Using the mind-brain dichotomy, he notes that something like a theory of implict expectations like PEARCE could be explanatory at the level of behavior as noted above, but says nothing about what is happening at the neuronal level.
-Both descriptive and explanatory theories are needed in that descriptive theories are used to test explanatory theories, and by strinng together different layers of abstraction, we can arrive at a better understanding of how the world works.
+Using the mind-brain dichotomy, he notes a theory of implict expectations like PEARCE could be explanatory at the level of behavior as noted above, but says nothing about what is happening at the neuronal level.
+Both descriptive and explanatory theories are needed in that descriptive theories are used to test explanatory theories, and by strining together different layers of abstraction, we can arrive at a better understanding of how the world works.
 
 Returning to melodic dictation, under Wiggins' framework, the Karpinki model of melodic dictation [@karpinskiAuralSkillsAcquisition2000; @karpinskiModelMusicPerception1990] would qualify as a decriptive model.
 The model says what happens over the time course of a melodic dictation-- specificying four discrete stages discussed in earlire chapters-- but does not explicitly state _how_ or _why_ this process happens. 
 In order to have a more complete understanding of melodic dictation, an explanatory model is needed. 
 
 In this chapter I introduce an explanatory model of melodic dictation. 
-The model is inspired by work from both computational musicology, as well as cognitive psychology and uses a uniform memory mechanism inspired by Cowan's Embedded Process Model of working memory to explain the process.
-In addition to quantifying each step, the model has points in it where parameters could be tweaked in order to accomodate for individual differences, while still relying on a domain general process. 
-The model consists of three main parts, each with its own set of parameters that 
+The model is inspired by work from both computational musicology drawing on the work of Marcus Pearce's IDyOM CITATION, as well as cognitive psychology and uses a uniform memory mechanism inspired by Cowan's Embedded Process Model of working memory to explain the process.
+In addition to quantifying each step, the model incorporates flexible parameters that could be tweaked in order to accomodate for individual differences, while still relying on a domain general process.
+By relying on cognitive mechanisms based in statistical observations, rather than a rule based system for music analysis (GTTM, NARMOUR, TEMPERLY) this model brings with it the same arguments made by Pearce in his 2018 article that allow for the heterogenity of musical experience amongst music listeners.
+
+## Model Introduction 
+
+The model consists of three main modules, each with its own set of parameters:
 
 1. Prior knowledge
 2. Selective Attention
 3. Transcription
 
-Inspired by Baysian computational modeling, the _Prior Knowledge_ part reflects the previous knowledge an individual brings to the melodic dictation.
-The selective memory-- somewhat akin to Karpinksi's extractive listening^[I use different terms to avoid confusion when comparing models later]-- segments incoming musical information by using the windown of attention/limits of working memory capacity as a sensory bottleneck to constrit the size of musical chunk that an individual were to trascribe.
-Once the focus of attention, the Transcription function recusrively pattern matches against the prior knowledge's corpus of information in order to find a match of explicitly known musical information.
+Inspired by Bayesian computational modeling, the _Prior Knowledge_ module reflects the previous knowledge an individual brings to the melodic dictation.
+The selective memory-- somewhat akin to Karpinksi's extractive listening^[I use different terms to avoid confusion when comparing models later]-- segments incoming musical information by using the window of attention as conceptualized as the limits of working memory capacity as a sensory bottleneck to constrit the size of musical chunk that an individual were to trascribe.
+Once musical material is in the focus of attention, the Transcription function recusrively pattern matches against the prior knowledge's corpus of information in order to find a match of explicitly known musical information.
 This process refects, but does not actually mirror the exact process used in melodic dictation, yet seems to be phenomenologically similar to the decision making process used when attempting notate novel melodies.
 Based on both the prior knowledge and individual differences of the indiviual, the model will scale in ability, with the general retrevial mechanisms in place.
-The exact details of the assumptions, free parameters, and complete formula of the model are discussed below.
+The exact details of the assumptions, parameters, and complete formula of the model are discussed below.
 
 * Name it here if you want 
 
@@ -40,7 +45,7 @@ It is important to note that this model is not perfect in that it deterministica
 It instead quantifies each step of the process and provides a detailed account each step of the process in a fully realized and implmentable process.
 The benefits of creating a computational model of melodic dictation are numerous.
 First, as stated above, a computational model acts as an explanatory model that details the inner working of a process.
-Second, by quantifying each step of the process, a computational model forces the researcher to specify key things that could be blown past.
+Second, by quantifying each step of the process, a computational model forces the researcher to specify key theoretical issues that need to be discussed and operationalized.
 In this case, we have to deal with the representation of musical material, defintions of working memory, as well as what does it mean for something to have been learned. 
 Thirdly, in creating a computational model you provide theories with a concrete version that can be more easier faslfied.
 The quintessential example of the importance of this comes from an anecodote in evolutionary psychology claiming that in heterosexual populations, men engage in more casual sexual encounters than women due to their promiscous proclivities.
@@ -58,10 +63,13 @@ Creating a computational model is the next step in furthering research on aural 
 In order to write a computer program that mirrors the melodic dictation process, how the mind "percieves" and "thinks" about musical information must be defined _a priori_.
 Before delving into questions of representation, this model assumes that the musical surface JACKENDOFF as represented by the notes via Western musical notation are salient and can be percieved as distnict perceptual phenomena.
 Although there is work that suggests that different cultures and levels of experience might not categorize melodic information universally MCDERMOTT, other work suggests that things like experiencing pitches as discrete, categorical phenomena is categorized as a statistical human universal SAVAGE.
-For the purposes of this model in that it models something specific to a very WEIRD CITATION demographic, I think it is safe.
+For the purposes of this model in that it models something specific to a very WEIRD CITATION demographic, this issue is not as relevant. 
 
 Knowing that it is melodic information or melodic data that needs to be represented, the question then becomes what are the best ways in which to represent it.
-Much work has been done on this history of musical representation WIGGINS ET AL 1993 has been exhastive, even though it has only been on for about 30 years but regardless of what exact representation is chosen, it generally can be concived of a symbol string Clifford et al., 2005.
+This issue becomes increasingly complex when considering literature suggesting that the human mind represents musical information in a variety of different forms from PEARCE 2018 CITE THAT YOU HIGHLIGHTED.
+While I will attend to this issue below using the current state of the art, a brief review of how information is represnted is warrented. 
+
+Much work has been done on this history of musical representation WIGGINS ET AL 1993 has been exhastive, even though it has only been on for about 30 years but regardless of what exact representation is chosen, it generally can be concived of as some sort of symbol string Clifford et al., 2005.
 How a string is represented carries with it important assumptions about a listern's percepetion and also a teacher's pedagogy.
 Take for example the many ways in which someone could represent the ever popular Twinkle, Twinkle Little Star as in Figure 1. 
 
@@ -95,22 +103,31 @@ This point also brings up the importance of noting that many of these systems co
 
 For the purposeses of this model and further examples I will use the absolute interval representation of pitches here, with further directions in this research addressing how it would be possible to implment things like the scale degree and _fixed do_ model.
 Comparisons of this model output will also contribute to conversations regarding pedagogy in that if one form of data represenation mirrors human behavior than the others, it would provide more than anecodotal evidence in support of the pedagogy of one system over another. 
-How the model represents musical information is the first important parameter value that needs be chosen before running the model and this establishes the prior information. 
+How the model represents musical information is the first important parameter value that needs be chosen before running the model and this establishes the prior information.
+
+Given what was stated above, there are many was in which to digitially represent musical information.
+That said, one advantage in using the pre-exisiting IDyOM model as the backbone for this model is that it is capable of representing many types of musical representation simultaneusly.
+Not only is pitch information represented, but using different WINDOWS, it then becomes possible to encode these multitude of parameteter simultanoulsy (LIST THEM HERE?) each as their own token, which then can be used to model information content. 
 
 ## Modeling Information Content 
 
 Having established that the models first established parameter to be decided is how strings of melodies are represented, the next important decision that has to be made is how decisions of segmentation for the second stage of attentive memory are decided.
-Although there has been a large amount of work on different ways to segment the musical surface JACKENDOFF DANIEL OTHERS THAT MOZART THING, rely on matching a music theorist's intution with a set of descriptive rules somewhat like the boundary formation rules in _GTTM_.
-While this continues a long tradition of research trying to determin formal boundaries (History of All Music Theory), since melodic dictation is an active memory process, rather than a semi-passive process of listening (tho MARIUS HAS SAID OTHERWISE/EMBODIMENT) this model needs to be able to quantify musical information that is both dependent on prior musical experience and allows a moveable boundary for selective attention so that musical information that is memory can be actively maintained, whilst carring out another cognitive process, that of notating the melody. 
+Although there has been a large amount of work on different ways to segment the musical surface using rule based methods JACKENDOFF NARMOUR 2 TEMPERLY MARGULIS, which rely on matching a music theorist's intution with a set of descriptive rules somewhat like the boundary formation rules in _GTTM_.
+While this continues a long tradition of research trying to determine formal boundaries (History of All Music Theory), as noted by Pearce (2018) rule based models are not able to handle music outside the school of theory that generated the music.
+Additionally, since melodic dictation is an active memory process, rather than a semi-passive process of listening this model needs to be able to quantify musical information that is both dependent on prior musical experience and allows a moveable boundary for selective attention so that musical information that is memory can be actively maintained, whilst carring out another cognitive process, that of notating the melody. 
 
-In order to create this metric, want to use IDyOM which uses IC (Shannon) and quantifies the IC of melodies based on a corpus of materials.
-Great thing about it is that IDyOM is machine learning so that can put in lots of different symbolys and get the IC.
-THIS IS THE WAY IT WORKS ON HIGH LEVEL WITH N-GRAMS.
+In order to create this metric, I rely on IDyOMs use of information content IC (Shannon) which quantifies the IC of melodies based on corpus of materials.
+Once hypothsis that IDyOM relies on is that musical information is learned via implicit statistical learning, which Pearce refers to as the Statistical Learning Hypothesis or SLH.
+The SLH states that 
 
-Given that each grouping of n-grams will have its own IC, can then use that and cumIC function to determine.
-Now all you have to do is set a theshold of memory (allow for indivudal differences) and then to also allow only a certain amount into attentional memory. 
+> musical enculturation is a process of implicit statistical learning in which listeners progressively acquire internal models of the statistical and structural regularities present in the musical styles to which they are exposed, over short (e.g., an individual piece of music) and long time scales (e.g., an entire lifetime of listening). p.2 
 
-Here parameter to consider is the threhold of WM which then allows for differnces at the indiviudal level. 
+Additionally IDyOM relies on the probabilistic prediction hypothesis or PPH which states that 
+
+> while listening to new music, an enculturated listener applies models learned via the SLH to generate probabilistic predictions that enable them to organize and process their mental representations of the music and generate culturally appropriate responses. p.2 
+
+Taken together and quantified using Shanaon information content, it then becomes possible to have a quantifiable measure that reliabily predicts the amount of percieved expectedness in a musical melody that can change pending on the musical corpus that the model is trained on.
+These measures of information content then can be summated together as a melody progresses over time and be used as a measure for the amount of limited musical material that is capable of being in the window of attention at one time. 
 
 For example, when trained against a corpus of melodies, THIS MELODY has IC (unitless thing) that is on top of notes.
 The advantage of operationalizing how an individual hears a melody like this is that melodies with lower information content, derrived from an understanding of having more predictiable patterns from the corpus, will allow for larger chunks to be put inside of the attentive memory buffer. 
@@ -132,8 +149,8 @@ At this point, the notes that are in the attentional buffer are sequestered and 
 In theory, the maximum of the attenional buffer should not be reached since the indivudal performing the dictation would still need mental resources and attention to actively manipulate the information in the attentional buffer for the process of notating.
 
 ### Pattern Matching
-
-With subset of notes of the melody now represented in the attentional buffer, whether or not the melody becomes notated depends on whether or not the melody or string in the buffer can be matched with a string that is explictly known in the corpus.
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+With subset of notes of the melody represented in the attentional buffer, whether or not the melody becomes notated depends on whether or not the melody or string in the buffer can be matched with a string that is explictly known in the corpus.
 * Do I introduce the explict implict thing earlier?
 Mirroring a search pattern akin to Cowan's Embeded Process model, the individual would search across their long term memory for anything close to or resembling the string pattern in the attentional buffer.
 
