--- a/document/02-individual-parameters.Rmd
+++ b/document/02-individual-parameters.Rmd
@@ -1,53 +1,279 @@
+---
+output:
+  word_document: default
+  html_document: default
+---
 # Individual Differences
 
-## Why care about cognitive abilities
+Audience: Individuals familiar with cognitive science that would think music is good way to talk about cognitive abilites
+
+Eventually i will say that 
+* WMC is really governing a lot of this work and people need to control for this pre-existing difference
+* 
+
+## Introduction
+
+Research investigating the relationship between musical and cognitive ability dates back to over a centry.
+In 1904, Charles Spearman [@spearmanGeneralIntelligenceObjectively1904] used tests of pitch perception as part of his initial battery of tests when first introducing his initial conceptions of general intelligence. 
+While musical ability is perhaps more affected by training than the other measures that were of interest to Spearman (i.e. language and mathematics), the relationship between musical and cognitive ability, and the factors that mediate their relationship still has yet to be fully understood.
+
+* Current state suggests that in some cases, musicians tend to do better than non musical peers
+* Okada and Slevc see this as explained by three possible hypotheses
+
+1. Music makes you smarter
+2. Smarter People take music lessons
+3. Higher functioning people tend to take music lessons and music training amplifys already pre-existing differences.
+
+It's important to get at this issue because if there were any causal elements found, this would have big implications since enhancing cognitive abilities would bring along with it the other benefits like X Y Z
+While this might be a nice side fiding, important to note that even if a causal link were to be established, tethering music engagement to its ability to make someone smarter is a bad idea for numerous reasons probably given by schellenberg. 
+
+Really the interesting reason to look into this relationship is that music, unlike other stimuli, provides a unique insight into looking things like gf and wmc bc no semantic information
+For example, if what is more likley the third hypothesis is true and there are just pre-existing differences that do not change but are mabye amplified with music lessons, this would have serious implications for a lot of the findings in the music psychology literature. 
+
+
+
 ### General intelligence and WMC 
+
+* Two biggest of interest are gf which is basically g which you can think of as IQ
+* Other is working memory capacity
+* WM is particularly relevant because design of a WMC study very much mirrors same different tasks used in music psych literature
+* THIS IS LIKE A NO BRAINER ON MELODIC DICTATION BUT WILL REMOVE THIS SENTENCE
+* Here are some examples of that 
+* We are not the first to make this parallel, Berz did it in 1995 and said that we need to look into this more
+* His rationale was that he thinks there was a musical loop in the context of modular models of wmc ala baddely 
+* Not nessecarily the case since there are other theoretical frameworks to talk about music 
+* As stated above, looking at music provides a unique insight into contributing to discussions of wmc
+
 ### Defining of terms
-## Have established that cognitive abilities contribute to musical task (for journal article langauge repeat)
-### General Fluid Intelligence, WMC, Training as uni of polymorphic
-## Remind the nature of a musical dictation type task (hear, loop, executive decision)  
-### This is WMC task, gf has problems (Although high level link with gf, problematic, WMC models at level of process of md)
-#### Berz 1994 noticed it first
-#### Williamson Baddely Hitch suggest maybe musical loop
-#### Even Cowan labs wonder how different (Li Cowan Saults )
-## WMC has been misused in music education, theory, pedagogy, aural literature and deserves attention
-### Problems with chunking 
-#### Mistake with Miller 1956, he did not mean 7 items
-#### Broadbent 1956 more of why its more like 3-4
-### Problems with using capacity limit literature
-#### See Cowan 2005 page 80
-#### Musical order is always serial effects
-### Should be using Cowan model because of these things (zooming) or discuss within Baddely Hitch/Atkinson Shriff
-### One Note does not mean one unit in memory!
-### Confounded by corpus distributions
-### Lack of understanding (all aural skills are those that engage WMC, LVH says many students have WMC deficits, "increase memory")
-### Point I am making is that if you're going to do it, do it well. 
-## Know WMC plays a role, sense, pertain, execute, should be able to pick up in experiment close to MD
-## Gold-MSI melodic Memory and beat perception test
-### What is gold MSI 
-### What are issues I want to talk about with psychometrics
-### Describe test in detail and WHY it's what we're after here
-#### not exactly mmd, but most people would say similar skill sets
-#### also before getting dirty,need experimental desing with less response options (Cowan, Saults, Elliott, Moreano 2002)
-## IF we accept these DVs, THEN we should be able to predict them with self reports and measures of WMC and gf
-## Do this with hierarchical LVM ala Elliott paper 
-### Versions of this paper at ICMPC
-### Exploratory in that tried a few different models (high type I error but whatever)
+
+* Having established this is a good problem, time to talk about what I think these terms mean
+* This is what gf is 
+* These are the people that have studied it and what they have found 
+* This is what wmc is as defined by Cowan 
+* Again, very clear parallels to wmc and if we can answer them w good evidence on large scale, good reason to think otherwise small
+* We see that in this.... literature
+* Could it be that there is a musical loop here ala Berz, Williamson, and would that explain Li Cowan Saults?
+
+* See, it's a great qustion to investigate 
+* Tho one big problem with music is that it's a lot harrier than other stimuli 
+* Every problem with chunking that Cowan 2005 talks about could be applied to music
+* Cant assume one note means one unit of memory and so on 
+* On top of that you have Pearce suggestion that things are encoded differently 
+* Also have problems of corpus distributions similar to words, good evidence for SLR and PPH 
+
+* regardless of this hariness, need to get further into it
+* Okada and slevec show that EF is also really important to make picture clearer
+* tho if you really want to to do working memory capacity, need to do complex span
+* the reason for this is xyz, can continue on from there
+* Again, WMC is underlying a lot of music stuff, we should see it on large scale 
+
+* Start setting up hypotheses 
+* What best predicts someone's ability to do well on a musical memory test? 
+* Not going to go straight to melodic dictation, first look into Berz 
+* If it really is musical training, we should be able to see that using measures of musical survey
+* If it's actually some sort of cognitive process, then that should have more predictive ability 
+* We can figure this out by fitting a series of models to the data and seeing which matches up best and it's measurements
+* Great ensemble of tests is the Gold-MSI bc it has self report and objective, and people have replicated it 
+* Specifically there are two objective tests
+* Describe them here
+* not exactly mmd, but similr skill set 
+* IF we accept these DVs, THEN we should be able to predict them with self reports and measures of WMC and gf
+* Do this with hierarchical LVM ala Elliott paper 
+
+* List hypotheses and predictions
 
 ## Overview of Experiment (cross sectional design)
 
 ### Participants
+
+Two hundred fifty-four students enrolled at Louisiana State University completed the study. 
+We recruited students, mainly in the Department of Psychology and the School of Music.
+The criteria for inclusion in the analysis were no self-reported hearing loss, not actively taking medication that would alter cognitive performance, and univariate outliers (defined as individuals whose performance on any task was greater than 3 standard deviations from the mean score of that task). 
+Using these criteria, eight participants were not eligible due to self reporting hearing loss, one participant was removed for age, and six participants were eliminated as univariate outliers due to performance on one or more of the tasks of working memory capacity.
+Thus, 239 participants met the criteria for inclusion. The eligible participants were between the ages of 17 and 43 (M = 19.72, SD = 2.74; 148 females). 
+Participants volunteered, received course credit, or were paid $20.
+
 ### Materials
+
+Cognitive Measures
+
+All variables used for modeling approximated normal distributions. 
+Processing errors for each task were positively skewed for the complex span tasks similar to Unsworth, Redick, Heitz, Broadway, and Engle (2009). 
+Positive and significant correlations were found between recall scores on the three tasks measuring working memory capacity (WMC) and the two measuring general fluid intelligence (Gf). 
+The WMC recall scores negatively correlated with the reported number of errors in each task, suggesting that rehearsal processes were effectively limited by the processing tasks (Unsworth et al., 2009).
+
+#### Measures
+
+##### Goldsmiths Musical Sophistication Index Self Report (Gold-MSI)
+
+Participants completed a 38-item self-report inventory and questions consisted of free response answers or choosing a
+selection on a likert scale that ranged from 1-7. (Müllensiefen, et al., 2014). 
+The complete survey with all questions used can be found at goo.gl/dqtSaB.
+
+##### Tone Span (TSPAN)
+
+Participants completed a two-step math operation and then tried to remember three different tones in an alternating sequence (based upon Unsworth et al., 2005). 
+We modelled the three tones after Li, Cowan, Saults (2005) paper using frequencies outside of the equal tempered system (200Hz, 375Hz, 702Hz). 
+The same math operation procedure as OSPAN was used. The tones was presented aurally for 1000ms after each math operation. During tone recall, participants were presented three different options H M and L (High, Medium, and Low), each with its own check box.
+Tones were recalled in serial order by clicking on each tone’s box in the appropriate order.
+Tone recall was untimed.
+Participants were provided practice trials and similar to OSPAN, the test procedure included three trials of each list length (3-7 tones), totalling 75 letters and 75 math operations.
+
+##### Operation Span (OSPAN)
+
+Participants completed a two-step math operation and then tried to remember a letter (F, H, J, K, L, N, P, Q, R, S, T, or
+Y) in an alternating sequence (Unsworth et al., 2005). 
+The same math operation procedure as TSPAN was used. 
+The letter was presented visually for 1000ms after each math
+operation. 
+During letter recall, participants saw a 4 x 3 matrix of all possible letters, each with its own check box. 
+Letters were recalled in serial order by clicking on each letter’s box in the appropriate order. 
+Letter recall was untimed. 
+Participants were provided practice trials and similar to TSPAN, the test procedure included three trials of each list length (3-7 letters), totalling 75 letters and 75 math operations.
+
+##### Symmetry Span (SSPAN)
+
+Participants completed a two-step symmetry judgment and were prompted to recall a visually-presented red square on a 4 X 4 matrix (Unsworth et al., 2005). 
+In the symmetry judgment, participants were shown an 8 x 8 matrix with random squares filled in black. 
+Participants had to decide if the black squares were symmetrical about the matrix’s vertical axis and then click the screen. 
+Next, they were shown a “yes” and “no” box and clicked on the appropriate box. 
+Participants then saw a 4 X 4 matrix for 650 ms with one red square after each symmetry judgment. 
+During square recall, participants recalled the location of each red square by clicking on the appropriate cell in serial order. 
+Participants were provided practice trials to become familiar with the procedure. 
+The test procedure included three trials of each list length (2-5 red squares), totalling 42 squares and 42 symmetry judgments.
+
+##### Gold-MSI Beat Perception
+
+Participants were presented 18 excerpts of instrumental music from rock, jazz, and classical genres (Müllensiefen et
+al., 2014). 
+Each excerpt was presented for 10 to 16s through headphones and had a tempo ranging from 86 to 165 beats per
+minute. 
+A metronomic beep was played over each excerpt either on or off the beat. 
+Half of the excerpts had a beep on the beat, and the other half had a beep off the beat. 
+After each excerpt was played, participants answered if the metronomic beep was on or off the beat and provided their confidence: “I
+am sure”, “I am somewhat sure”, or “I am guessing”. 
+The final score was the proportion of correct responses on the beat judgment.
+
+##### Gold-MSI Melodic Memory Test
+
+Participants were presented melodies between 10 to 17 notes long through headphones (Müllensiefen et al., 2014).
+There were 12 trials, half with the same melody and half with different melodies. 
+During each trial, two versions of a melody were presented. 
+The second version was transposed to a different key. 
+In half of the second version melodies, a note was changed a step up or down from its original position in the structure of the melody. 
+After each trial, participants answered if the two melodies had identical pitch interval structures.
+
+##### Number Series
+
+Participants were presented with a series of numbers with
+an underlying pattern. 
+After being given two example problems to solve, participants had 4.5 minutes in order to solve 15 different problems. 
+Each trial had 5 different options as possible answers (Thurstone, 1938).
+
+##### Raven’s Advanced Progressive Matrices
+
+Participants were presented a 3 x 3 matrix of geometric patterns with one pattern missing (Raven et al., 1998). 
+Up to eight pattern choices were given at the bottom of the screen. 
+Participants had to click the choice that correctly fit the pattern above. 
+There were three blocks of 12 problems, totalling 36 problems. 
+The items increased in difficulty across each block. 
+A maximum of 5 min was allotted for each block, totalling 15 min. 
+The final score was the total number of correct responses across the three blocks.
+
 ### Procedure
+
+Participants in this experiment completed eight different tasks, lasting about 90 minutes in duration. 
+The tasks consisted of the Gold-MSI self-report inventory, coupled with the Short Test of Musical Preferences, and a supplementary demographic questionnaire that included questions about socioeconomic status, aural skills history, hearing loss, and any medication that might affect their ability to perform on cognitive tests. 
+Following the survey they completed three WMC tasks: a novel Tonal Span, Symmetry span, and Operation span task; a battery of perceptual tests from the Gold-MSI (Melodic Memory, Beat Perception, Sound Similarity) and two tests of general fluid intelligence (Gf): Number Series and Raven’s Advanced Progressive Matrices.
+
+Each task was administered in the order listed above on a desktop computer. 
+Sounds were presented at a comfortable listening level for the tasks that required headphones. 
+All participants provided informed consent and were debriefed.
+Only measures used in modeling are reported below.
+
 ### Results
-#### Descriptive, Correlational
+
+#### Descriptive, Data Screening, Correlational
+
+The goal of the analyses was to examine the relationships among the measures and constructs of WMC, general fluid intelligence, musical sophistication (operationalized as the General score from the Gold-MSI), in relation to the two objective listening tests on the Gold-MSI. 
+Before running any sort of modeling, we inspected our data to ensure in addition to outlier issues as mentioned above, the data exhibited normal distributions. 
+We report both our correlation values, as well as visually displaying our distributions in Figure 1.
+
+Before running any modeling, we checked our data for assumptions of normality since violations of normality can strongly affect the covariances between items. 
+While some items in Figure 1 displayed a negative skew, many of the individual level items from the self report scale exhibited high
+levels of Skew and Kurtosis beyond the generally accepted ± 2 (Field, Miles, & Field, 2012), but none of the items with the unsatisfactory measures are used in the general factor.
+
 #### Modeling
+
+##### Measurement Model
+
+We then fit a measurement model to examine the underlying structure of the variables of interest used to assess the latent constructs (general musical sophistication, WMC, general fluid intelligence) by performing a confirmatory factor analysis (CFA) using the lavaan package (Rosseel, 2013) using R (R Core Team, 2017). 
+Model fits in can be found in Table 3. 
+For each model, latent factors were constrained to have a mean of 0 and variance of 1 in order to allow the latent covariances to be interpreted as correlations. 
+Since the objective measures were on different scales, all variables were converted to z scores before running any modeling.
+
+* MODEL HERE 
+
+Variables are defined as follows: gen: general factor latent variable; wmc: working memory capacity; gf: general fluid intelligence; zIS: “Identify What is Special”; zHO: “Hear Once Sing Back”; zSB: “Sing Back After 2-3”; zDS: “Don’t Sing In Public”; zSH: “Sing In Harmony”; zJI:”Join In”; zNI: “Number of Instrumetns”; zRP:”Regular Practice”; zNCS: “Not Consider Self Musician”; zNcV: “Never Complimented”; zST: “Self Tonal”; zCP: “Compare Performances”; zAd: “Addiction”; zSI: “Search Internet”; zWr: “Writing About Music”; zFr: “Free Time”; zTP: “Tone Span”; zMS: “Symmetry Span”; zMO: “Operation Span”; zRA: “Ravens”; zAN: “Number Series”.
+
+#### Structural Equation Models
+
+Following the initial measurement model, we then fit a series of SEMs in order to investigate both the degree to which factor loadings changed when variables were removed from the model as well as the model fits. 
+We began with a model incorporating our three latent variables (general musical sophistication, WMC, general fluid intelligence) predicting our two objective measures (beat perception and melodic memory scores) and then detailed steps we took in order to improve model fit. 
+For each model, we calculated four model fits: χ2 , comparative fit index (CFI), root mean square error (RMSEA), and Tucker Lewis Index (TLI). 
+In general, a non-significant χ2 indicates good model fit, but is overly sensitive to sample size. 
+Comparative Fit Index (CFI) values of .95 or higher are considered to be indicative of good model fits as well as Root Mean Square Error (RMSEA) values of .06 or lower, Tucker Lewis Index (TLI) values closer to 1 indicate a better fit. (Beajean, 2014).
+
+After running the first model (Model 1), we then examined the residuals between the correlation matrix the model expects and our actual correlation matrix looking for residuals
+above .1. 
+While some variables scored near .1, two items dealing with being able to sing (“I can hear a melody once and sing it back after hearing it 2 – 3 times” and “I can hear a melody once and sing it back”) exhibited a high level of correlation amongst the residuals (.41) and were removed for  Model 2 and model fit improved significantly (χ2 (41)=123.39,
+p < . 001). 
+
+After removing the poorly fitting items, we then proceeded to examine if removing the general musical sophistication self-report measures would significantly improve model fit for Model 3. 
+Fit measures for Model 3 can be seen in Table 3 and removing the self-report items resulted in a significantly better model fit (χ2 (171)=438.8, p < . 001). 
+Following the rule of thumb that at least 3 variables should be used to define any latent-variable (Beajuean, 2014) we modelled WMC as latent variable and Gf as a composite average of the two tasks administered in order to improve model fit. 
+This model resulted in significant improvement to the model (χ2 (4)=14.37, p < . 001). 
+Finally we examined the change in test statistics between Model 2 and a model that removed the cognitive measures-- a model akin to one of the original models reported in Müllensiefen et al., (2014)-- for Model 5. 
+Testing between the two models resulted in a significant improvement in model fit (χ2 (78)=104.75, p < . 001). 
+Figure 3 displays Model 4, our nested model with the best fit indices.
+
+* TABLE HERE
+
+* ALL FIGURES OF MODELS 
+
 ### Discussion
-#### Review of the Goals
-#### What were best model fits
-#### Clear effect of WMC
-#### What if we are just measuring WMC? 
-#### Obvs need this for futre studies
-#### Need to use something to go above and beyond baseline (--transition to corpus as memory and n-gram)
-#### Future verbal theoretical and computational models should involve capacity measures (limits)
- 
+
+##### Measurement Model 
+
+After running a confirmatory factor analysis on the variables of interest, the model fit was below the threshold of what is considered a “good model fit” as shown in Table 1 with references to above model fits. 
+This finding is to be expected since no clear theoretical model has been put forward that would suggest that the general musical sophistication score, when modelled with two cognitive measures should have a good model fit. 
+This model was run to create a baseline measurement.
+
+##### Structural Equation Model Fitting
+
+Following a series of nested model fits, we were able to improve model fits on a series of SEMs that incorporated both measures of WMC and measures of general fluid intelligence.
+Before commenting on new models, it is worth noting that the Model 5 does not seem to align with the findings from the original 2014 paper by Müllensiefen et al. 
+While the correlation between the objective tasks is the same (r = .16), the factor loadings from this paper suggest lower values for both Beat Perception (.37 original, .27 this paper) as well as Melodic Memory (.28 original, .18 this paper). 
+Note that two items were removed dealing with melody for memory for this model; when those items were re-run with the data, the factor
+loadings did not deviate from these numbers.
+
+The first two models we ran resulted in minor improvements to model fit. 
+While difference in models was significant (χ2 (41)=123.39, p < . 001 ), probably due to the
+number of parameters that were now not constrained, the
+relative fit indices of the models did not change drastically. 
+It was not until the self-report measures were removed from the model, and then manipulated according to latent variable modeling recommendations, was there a marked increase in the relative fit indices. 
+Fitting the model with only the cognitive measures, we were able to enter the bounds of acceptable relative fit indices that were noted above. 
+In order to find evidence that the cognitive models (Models 3 and 4) were indeed a better fit than using the General factor, we additionally ran a comparison between our adjusted measurement model and a model with only the self report.
+While both of our nested models were significantly different, the cognitive models exhibited superior relative fit indices.
+Lastly, turning to Figure 3, we note that our latent variable of WMC exhibited much larger factor loadings predicting the two objective, perceptual tests than our measure of general fluid intelligence. 
+We also note that the factor loading predicting the Beat Perception task (.36) was higher than that of the Melodic Memory task (.21). These rankings mirror that of the original Müllensiefen et al., (2014) paper and merit further examination in order to disentangle what processes are contributing to both tasks.
+
+These results align with predictions made with Process Overlap Theory (Kovacs & Conway,
+2016), which predict that higher executive loads are needed
+for tasks of perception. 
+While we failed to predict which task would load higher --we assumed that the ability to maintain and manipulate information in the Melodic Memory task would be better predicted by WMC than the Beat Perception task-- this might be due to the fact that performing well in a melodic memory task demands a certain amount of musical training that is not captured by either cognitive measure.
+In the future, we are interested in exploring more theoretically-driven models that use specific, task oriented predictors in order to explain the relationships between the perceptual tasks and the cognitive measures. 
+Given the results here that suggest that measures of cognitive ability play a significant role in tasks of musical perception, we suggest that future research should consider taking measures of cognitive ability into account, so that other variables of interest are able to be shown to contribute above and beyond baseline cognitive measures.
+
+In this paper we fit a series of structural equation models in order to investigate the degree to which baseline cognitive ability was able to predict performance on a musical perception task. 
+Our findings suggest that measures of WMC are able to account for a large amount of variance beyond that of self report in tasks of musical perception.
